convert properly SkiaSalBitmap to WinSalBitmap (tdf#133152)

The code didn't account for topdown bitmaps.

Change-Id: Ia326834cfd6d2d022579fdde24828f7e0a8d8b3e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94643
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>